fix image alignment classes

--- a/scss/elements/_media.scss
+++ b/scss/elements/_media.scss
@@ -52,7 +52,6 @@ img.alignnone,
 .aligncenter, 
 .alignnone {
 	clear: both;
-	margin: 10px 0;
 }
 
 /* Image Caption */
